2007-03-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixelrgn.c (gimp_pixel_rgn_init): initialize
	rowstride to zero; it's meaningless as long as data is NULL.

2007-03-28  Sven Neumann  <sven@gimp.org>

	* app/pdb/layer_cmds.c
	* libgimp/gimplayer_pdb.c: regenerated.

2007-03-28 João S. O. Bueno Calligaris <gwidion@mpc.com.br>

        * tools/pdbgen/pdb/layer.pdb: clarified documentation for
	add_mask procedure; fixed typo in documentation for create_mask.

2007-03-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: added a boolean return value to
	the D-Bus Open method.

2007-03-27  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.[ch]: changed file_open_from_command_line()
	to deal with a single filename only.

	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: changed the D-Bus Open method to
	take only a single filename.

	* app/app.c
	* app/main.c: changed accordingly.

2007-03-26  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/compressor.c (save_image, load_image): 
	Check if the files to be read or written and the temporary files
	have been opened. Otherwise, bail out safely instead of causing a
	crash. Fixes bug #422444.

2007-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/dbus-service.xml
	* app/widgets/gimpdbusservice.h: be more specific in the D-Bus
	service and interface name.

2007-03-23  Sven Neumann  <sven@gimp.org>

	Make XOR color configurable (bug #421466):

	* app/config/gimprc-blurbs.h
	* app/config/gimpdisplayconfig.[ch]: added gimprc option for the
	XOR color.

	* app/display/gimpcanvas.[ch]: keep a reference to the Gimp object
	and take the XOR color from GimpDisplayConfig.

	* app/display/gimpdisplayshell.c: pass gimp to gimp_canvas_new().

2007-03-22  Sven Neumann  <sven@gimp.org>

	* app/core/gimplayer.c (gimp_layer_add_mask): allow adding a mask
	to a layer without alpha channel (bug #316207).

2007-03-21  Sven Neumann  <sven@gimp.org>